--- a/ANNDL final.ipynb
+++ b/ANNDL final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "[5 rows x 49 columns]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        " ('WindDirection', 54)]"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "Name: StadiumType, dtype: int64"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "Name: StadiumType, dtype: int64"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,10 +561,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#these 3 become irrelevant. use timedelta and age instead\n",
     "train = train.drop(['TimeHandoff', 'TimeSnap', 'PlayerBirthDate'], axis=1)"
    ]
   },
@@ -577,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,216 +702,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>GameId</th>\n",
-       "      <th>PlayId</th>\n",
-       "      <th>Team</th>\n",
-       "      <th>X</th>\n",
-       "      <th>Y</th>\n",
-       "      <th>S</th>\n",
-       "      <th>A</th>\n",
-       "      <th>Dis</th>\n",
-       "      <th>Orientation</th>\n",
-       "      <th>Dir</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Temperature</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>WindSpeed</th>\n",
-       "      <th>WindDirection</th>\n",
-       "      <th>HomePossesion</th>\n",
-       "      <th>Field_eq_Possession</th>\n",
-       "      <th>HomeField</th>\n",
-       "      <th>PlayerBMI</th>\n",
-       "      <th>TimeDelta</th>\n",
-       "      <th>PlayerAge</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2017090700</td>\n",
-       "      <td>20170907000118</td>\n",
-       "      <td>away</td>\n",
-       "      <td>73.91</td>\n",
-       "      <td>34.84</td>\n",
-       "      <td>1.69</td>\n",
-       "      <td>1.13</td>\n",
-       "      <td>0.40</td>\n",
-       "      <td>81.99</td>\n",
-       "      <td>177.18</td>\n",
-       "      <td>...</td>\n",
-       "      <td>63.0</td>\n",
-       "      <td>77.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.25</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>28.749228</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>28.692760</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2017090700</td>\n",
-       "      <td>20170907000118</td>\n",
-       "      <td>away</td>\n",
-       "      <td>74.67</td>\n",
-       "      <td>32.64</td>\n",
-       "      <td>0.42</td>\n",
-       "      <td>1.35</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>27.61</td>\n",
-       "      <td>198.70</td>\n",
-       "      <td>...</td>\n",
-       "      <td>63.0</td>\n",
-       "      <td>77.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.25</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>35.993600</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>28.457305</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2017090700</td>\n",
-       "      <td>20170907000118</td>\n",
-       "      <td>away</td>\n",
-       "      <td>74.00</td>\n",
-       "      <td>33.20</td>\n",
-       "      <td>1.22</td>\n",
-       "      <td>0.59</td>\n",
-       "      <td>0.31</td>\n",
-       "      <td>3.01</td>\n",
-       "      <td>202.73</td>\n",
-       "      <td>...</td>\n",
-       "      <td>63.0</td>\n",
-       "      <td>77.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.25</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>33.744000</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>28.629790</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2017090700</td>\n",
-       "      <td>20170907000118</td>\n",
-       "      <td>away</td>\n",
-       "      <td>71.46</td>\n",
-       "      <td>27.70</td>\n",
-       "      <td>0.42</td>\n",
-       "      <td>0.54</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>359.77</td>\n",
-       "      <td>105.64</td>\n",
-       "      <td>...</td>\n",
-       "      <td>63.0</td>\n",
-       "      <td>77.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.25</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>30.619556</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>34.795430</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2017090700</td>\n",
-       "      <td>20170907000118</td>\n",
-       "      <td>away</td>\n",
-       "      <td>69.32</td>\n",
-       "      <td>35.42</td>\n",
-       "      <td>1.82</td>\n",
-       "      <td>2.43</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>12.63</td>\n",
-       "      <td>164.31</td>\n",
-       "      <td>...</td>\n",
-       "      <td>63.0</td>\n",
-       "      <td>77.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.25</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>27.935571</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>30.061685</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 52 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       GameId          PlayId  Team      X      Y     S     A   Dis  \\\n",
-       "0  2017090700  20170907000118  away  73.91  34.84  1.69  1.13  0.40   \n",
-       "1  2017090700  20170907000118  away  74.67  32.64  0.42  1.35  0.01   \n",
-       "2  2017090700  20170907000118  away  74.00  33.20  1.22  0.59  0.31   \n",
-       "3  2017090700  20170907000118  away  71.46  27.70  0.42  0.54  0.02   \n",
-       "4  2017090700  20170907000118  away  69.32  35.42  1.82  2.43  0.16   \n",
-       "\n",
-       "   Orientation     Dir  ...  Temperature Humidity  WindSpeed  WindDirection  \\\n",
-       "0        81.99  177.18  ...         63.0     77.0        8.0           1.25   \n",
-       "1        27.61  198.70  ...         63.0     77.0        8.0           1.25   \n",
-       "2         3.01  202.73  ...         63.0     77.0        8.0           1.25   \n",
-       "3       359.77  105.64  ...         63.0     77.0        8.0           1.25   \n",
-       "4        12.63  164.31  ...         63.0     77.0        8.0           1.25   \n",
-       "\n",
-       "   HomePossesion  Field_eq_Possession  HomeField  PlayerBMI  TimeDelta  \\\n",
-       "0           True                 True       True  28.749228        1.0   \n",
-       "1           True                 True       True  35.993600        1.0   \n",
-       "2           True                 True       True  33.744000        1.0   \n",
-       "3           True                 True       True  30.619556        1.0   \n",
-       "4           True                 True       True  27.935571        1.0   \n",
-       "\n",
-       "   PlayerAge  \n",
-       "0  28.692760  \n",
-       "1  28.457305  \n",
-       "2  28.629790  \n",
-       "3  34.795430  \n",
-       "4  30.061685  \n",
-       "\n",
-       "[5 rows x 52 columns]"
-      ]
-     },
-     "execution_count": 160,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train.head()"
    ]
@@ -924,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,52 +799,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['GameId', 'PlayId', 'Team', 'X', 'Y', 'S', 'A', 'Dis', 'Orientation',\n",
-       "       'Dir', 'DisplayName', 'JerseyNumber', 'Season', 'YardLine', 'Quarter',\n",
-       "       'GameClock', 'PossessionTeam', 'Down', 'Distance', 'FieldPosition',\n",
-       "       'HomeScoreBeforePlay', 'VisitorScoreBeforePlay', 'OffenseFormation',\n",
-       "       'OffensePersonnel', 'DefendersInTheBox', 'DefensePersonnel',\n",
-       "       'PlayDirection', 'Yards', 'PlayerHeight', 'PlayerWeight',\n",
-       "       'PlayerCollegeName', 'Position', 'HomeTeamAbbr', 'VisitorTeamAbbr',\n",
-       "       'Week', 'Stadium', 'Location', 'StadiumType', 'Turf', 'GameWeather',\n",
-       "       'Temperature', 'Humidity', 'WindSpeed', 'WindDirection',\n",
-       "       'HomePossesion', 'Field_eq_Possession', 'HomeField', 'PlayerBMI',\n",
-       "       'TimeDelta', 'PlayerAge', 'IsRusher'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 167,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['SHOTGUN', 'SINGLEBACK', 'JUMBO', 'PISTOL', 'I_FORM', 'ACE',\n",
-       "       'WILDCAT', nan, 'EMPTY'], dtype=object)"
-      ]
-     },
-     "execution_count": 170,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train['OffenseFormation'].unique()"
    ]
@@ -1060,11 +820,22 @@
    "metadata": {},
    "source": [
     "#### NOTES ON FORMATION\n",
-    "\n",
+    "    ace: \"effective run formation\"\n",
+    "    I_form: primarily runs\n",
+    "    wildcat: runs\n",
+    "    pistol: good for runs\n",
+    "    jumbo: short runs\n",
     "    single back: equal run or pass\n",
-    "    empty: no running backs, won't run unless its an end around\n",
-    "\n"
+    "    shotgun: \"generally more difficult to establish a rushing attack using only the shotgun, most NFL teams save the shotgun for obvious passing situations\"\n",
+    "    empty: no running backs, won't run unless its an end around"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
