--- a/ANNDL final.ipynb
+++ b/ANNDL final.ipynb
@@ -1,6 +1,36 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Final Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Game Plan:\n",
+    "Gradient boosting vs deep learning\n",
+    "One-hot encoding for categorical features\n",
+    "Continuous Ranked Probability Score and Mean Absolute Error\n",
+    "\n",
+    "Read about cox propotional hazard model https://www.kaggle.com/sryo188558/cox-proportional-hazard-model\n",
+    "\n",
+    "Read about Continuous Ranked Probability Score https://www.kaggle.com/hukuda222/nfl-simple-evluation-trick\n",
+    "\n",
+    "Comprehensive full model https://www.kaggle.com/mrkmakr/neural-network-with-mae-objective-0-01381\n",
+    "\n",
+    "Best Performing public notebook currently: https://www.kaggle.com/bestpredict/location-eda-8eb410 and \n",
+    "https://www.kaggle.com/coolcoder22/nn-19-features\n",
+    "\n",
+    "Good explanations:https://www.kaggle.com/robikscube/big-data-bowl-comprehensive-eda-with-pandas\n",
+    "\n",
+    "MOST IMPORTANT NOTEBOOK TO REFER TO - INSANE EDA https://www.kaggle.com/tombresee/next-gen-eda"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 172,
    "metadata": {},
