--- a/ANNDL final.ipynb
+++ b/ANNDL final.ipynb
@@ -18,6 +18,14 @@
     "Best Performing public notebook currently: https://www.kaggle.com/bestpredict/location-eda-8eb410 and \n",
     "https://www.kaggle.com/coolcoder22/nn-19-features\n",
     "\n",
+    "Different feature engineering:\n",
+    "Some guys 40 best features - https://www.kaggle.com/c/nfl-big-data-bowl-2020/discussion/113698#latest-664158\n",
+    "\n",
+    "https://www.kaggle.com/bgmello/neural-networks-feature-engineering-for-the-win  \n",
+    "\n",
+    "https://www.kaggle.com/ekhtiar/features-features-features\n",
+    "\n",
+    "\n",
     "#### In write up we need to explain why:\n",
     "Gradient boosting vs deep learning  \n",
     "\n",
