--- a/ANNDL final.ipynb
+++ b/ANNDL final.ipynb
@@ -11,14 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Game Plan:\n",
-    "Copy Preprocess and altering to make the left always left:  \n",
-    "\n",
     "Comprehensive full model https://www.kaggle.com/mrkmakr/neural-network-with-mae-objective-0-01381\n",
     "Best Performing public notebook currently: https://www.kaggle.com/bestpredict/location-eda-8eb410 and \n",
     "https://www.kaggle.com/coolcoder22/nn-19-features\n",
     "\n",
-    "Different feature engineering:\n",
+    "**Different feature engineering:**  \n",
+    "\n",
     "Some guys 40 best features - https://www.kaggle.com/c/nfl-big-data-bowl-2020/discussion/113698#latest-664158\n",
     "\n",
     "https://www.kaggle.com/bgmello/neural-networks-feature-engineering-for-the-win  \n",
@@ -54,7 +52,20 @@
     "import pandas as pd\n",
     "from string import punctuation\n",
     "import re\n",
-    "import datetime"
+    "import datetime\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mpl\n",
+    "import seaborn as sns\n",
+    "import datetime\n",
+    "from kaggle.competitions import nflrush\n",
+    "import tqdm\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+    "import keras\n",
+    "\n",
+    "from tqdm import tqdm_notebook\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -69,7 +80,9 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1121,11 +1134,221 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Function to create anchor offense moving left from {0,0} and features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_features(df, deploy=False):\n",
+    "    def new_X(x_coordinate, play_direction):\n",
+    "        if play_direction == 'left':\n",
+    "            return 120.0 - x_coordinate\n",
+    "        else:\n",
+    "            return x_coordinate\n",
+    "\n",
+    "    def new_line(rush_team, field_position, yardline):\n",
+    "        if rush_team == field_position:\n",
+    "            # offense starting at X = 0 plus the 10 yard endzone plus the line of scrimmage\n",
+    "            return 10.0 + yardline\n",
+    "        else:\n",
+    "            # half the field plus the yards between midfield and the line of scrimmage\n",
+    "            return 60.0 + (50 - yardline)\n",
+    "\n",
+    "    def new_orientation(angle, play_direction):\n",
+    "        if play_direction == 'left':\n",
+    "            new_angle = 360.0 - angle\n",
+    "            if new_angle == 360.0:\n",
+    "                new_angle = 0.0\n",
+    "            return new_angle\n",
+    "        else:\n",
+    "            return angle\n",
+    "\n",
+    "    def euclidean_distance(x1,y1,x2,y2):\n",
+    "        x_diff = (x1-x2)**2\n",
+    "        y_diff = (y1-y2)**2\n",
+    "\n",
+    "        return np.sqrt(x_diff + y_diff)\n",
+    "\n",
+    "    def back_direction(orientation):\n",
+    "        if orientation > 180.0:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return 0\n",
+    "\n",
+    "    def update_yardline(df):\n",
+    "        new_yardline = df[df['NflId'] == df['NflIdRusher']]\n",
+    "        new_yardline['YardLine'] = new_yardline[['PossessionTeam','FieldPosition','YardLine']].apply(lambda x: new_line(x[0],x[1],x[2]), axis=1)\n",
+    "        new_yardline = new_yardline[['GameId','PlayId','YardLine']]\n",
+    "\n",
+    "        return new_yardline\n",
+    "\n",
+    "    def update_orientation(df, yardline):\n",
+    "        df['X'] = df[['X','PlayDirection']].apply(lambda x: new_X(x[0],x[1]), axis=1)\n",
+    "        df['Orientation'] = df[['Orientation','PlayDirection']].apply(lambda x: new_orientation(x[0],x[1]), axis=1)\n",
+    "        df['Dir'] = df[['Dir','PlayDirection']].apply(lambda x: new_orientation(x[0],x[1]), axis=1)\n",
+    "\n",
+    "        df = df.drop('YardLine', axis=1)\n",
+    "        df = pd.merge(df, yardline, on=['GameId','PlayId'], how='inner')\n",
+    "\n",
+    "        return df\n",
+    "\n",
+    "    def back_features(df):\n",
+    "        carriers = df[df['NflId'] == df['NflIdRusher']][['GameId','PlayId','NflIdRusher','X','Y','Orientation','Dir','YardLine']]\n",
+    "        carriers['back_from_scrimmage'] = carriers['YardLine'] - carriers['X']\n",
+    "        carriers['back_oriented_down_field'] = carriers['Orientation'].apply(lambda x: back_direction(x))\n",
+    "        carriers['back_moving_down_field'] = carriers['Dir'].apply(lambda x: back_direction(x))\n",
+    "        carriers = carriers.rename(columns={'X':'back_X',\n",
+    "                                            'Y':'back_Y'})\n",
+    "        carriers = carriers[['GameId','PlayId','NflIdRusher','back_X','back_Y','back_from_scrimmage','back_oriented_down_field','back_moving_down_field']]\n",
+    "\n",
+    "        return carriers\n",
+    "\n",
+    "    def features_relative_to_back(df, carriers):\n",
+    "        player_distance = df[['GameId','PlayId','NflId','X','Y']]\n",
+    "        player_distance = pd.merge(player_distance, carriers, on=['GameId','PlayId'], how='inner')\n",
+    "        player_distance = player_distance[player_distance['NflId'] != player_distance['NflIdRusher']]\n",
+    "        player_distance['dist_to_back'] = player_distance[['X','Y','back_X','back_Y']].apply(lambda x: euclidean_distance(x[0],x[1],x[2],x[3]), axis=1)\n",
+    "\n",
+    "        player_distance = player_distance.groupby(['GameId','PlayId','back_from_scrimmage','back_oriented_down_field','back_moving_down_field'])\\\n",
+    "                                         .agg({'dist_to_back':['min','max','mean','std']})\\\n",
+    "                                         .reset_index()\n",
+    "        player_distance.columns = ['GameId','PlayId','back_from_scrimmage','back_oriented_down_field','back_moving_down_field',\n",
+    "                                   'min_dist','max_dist','mean_dist','std_dist']\n",
+    "\n",
+    "        return player_distance\n",
+    "\n",
+    "    def defense_features(df):\n",
+    "        rusher = df[df['NflId'] == df['NflIdRusher']][['GameId','PlayId','Team','X','Y']]\n",
+    "        rusher.columns = ['GameId','PlayId','RusherTeam','RusherX','RusherY']\n",
+    "\n",
+    "        defense = pd.merge(df,rusher,on=['GameId','PlayId'],how='inner')\n",
+    "        defense = defense[defense['Team'] != defense['RusherTeam']][['GameId','PlayId','X','Y','RusherX','RusherY']]\n",
+    "        defense['def_dist_to_back'] = defense[['X','Y','RusherX','RusherY']].apply(lambda x: euclidean_distance(x[0],x[1],x[2],x[3]), axis=1)\n",
+    "\n",
+    "        defense = defense.groupby(['GameId','PlayId'])\\\n",
+    "                         .agg({'def_dist_to_back':['min','max','mean','std']})\\\n",
+    "                         .reset_index()\n",
+    "        defense.columns = ['GameId','PlayId','def_min_dist','def_max_dist','def_mean_dist','def_std_dist']\n",
+    "\n",
+    "        return defense\n",
+    "\n",
+    "    def static_features(df):\n",
+    "        \n",
+    "        \n",
+    "        add_new_feas = []\n",
+    "\n",
+    "        ## Height\n",
+    "        df['PlayerHeight_dense'] = df['PlayerHeight'].apply(lambda x: 12*int(x.split('-')[0])+int(x.split('-')[1]))\n",
+    "        \n",
+    "        add_new_feas.append('PlayerHeight_dense')\n",
+    "\n",
+    "        ## Time\n",
+    "        df['TimeHandoff'] = df['TimeHandoff'].apply(lambda x: datetime.datetime.strptime(x, \"%Y-%m-%dT%H:%M:%S.%fZ\"))\n",
+    "        df['TimeSnap'] = df['TimeSnap'].apply(lambda x: datetime.datetime.strptime(x, \"%Y-%m-%dT%H:%M:%S.%fZ\"))\n",
+    "\n",
+    "        df['TimeDelta'] = df.apply(lambda row: (row['TimeHandoff'] - row['TimeSnap']).total_seconds(), axis=1)\n",
+    "        df['PlayerBirthDate'] =df['PlayerBirthDate'].apply(lambda x: datetime.datetime.strptime(x, \"%m/%d/%Y\"))\n",
+    "\n",
+    "        ## Age\n",
+    "        seconds_in_year = 60*60*24*365.25\n",
+    "        df['PlayerAge'] = df.apply(lambda row: (row['TimeHandoff']-row['PlayerBirthDate']).total_seconds()/seconds_in_year, axis=1)\n",
+    "        add_new_feas.append('PlayerAge')\n",
+    "\n",
+    "        ## WindSpeed\n",
+    "        df['WindSpeed_ob'] = df['WindSpeed'].apply(lambda x: x.lower().replace('mph', '').strip() if not pd.isna(x) else x)\n",
+    "        df['WindSpeed_ob'] = df['WindSpeed_ob'].apply(lambda x: (int(x.split('-')[0])+int(x.split('-')[1]))/2 if not pd.isna(x) and '-' in x else x)\n",
+    "        df['WindSpeed_ob'] = df['WindSpeed_ob'].apply(lambda x: (int(x.split()[0])+int(x.split()[-1]))/2 if not pd.isna(x) and type(x)!=float and 'gusts up to' in x else x)\n",
+    "        df['WindSpeed_dense'] = df['WindSpeed_ob'].apply(strtofloat)\n",
+    "        add_new_feas.append('WindSpeed_dense')\n",
+    "\n",
+    "        ## Weather\n",
+    "        df['GameWeather_process'] = df['GameWeather'].str.lower()\n",
+    "        df['GameWeather_process'] = df['GameWeather_process'].apply(lambda x: \"indoor\" if not pd.isna(x) and \"indoor\" in x else x)\n",
+    "        df['GameWeather_process'] = df['GameWeather_process'].apply(lambda x: x.replace('coudy', 'cloudy').replace('clouidy', 'cloudy').replace('party', 'partly') if not pd.isna(x) else x)\n",
+    "        df['GameWeather_process'] = df['GameWeather_process'].apply(lambda x: x.replace('clear and sunny', 'sunny and clear') if not pd.isna(x) else x)\n",
+    "        df['GameWeather_process'] = df['GameWeather_process'].apply(lambda x: x.replace('skies', '').replace(\"mostly\", \"\").strip() if not pd.isna(x) else x)\n",
+    "        df['GameWeather_dense'] = df['GameWeather_process'].apply(map_weather)\n",
+    "        add_new_feas.append('GameWeather_dense')\n",
+    "#         ## Rusher\n",
+    "#         train['IsRusher'] = (train['NflId'] == train['NflIdRusher'])\n",
+    "#         train['IsRusher_ob'] = (train['NflId'] == train['NflIdRusher']).astype(\"object\")\n",
+    "#         temp = train[train[\"IsRusher\"]][[\"Team\", \"PlayId\"]].rename(columns={\"Team\":\"RusherTeam\"})\n",
+    "#         train = train.merge(temp, on = \"PlayId\")\n",
+    "#         train[\"IsRusherTeam\"] = train[\"Team\"] == train[\"RusherTeam\"]\n",
+    "\n",
+    "        ## dense -> categorical\n",
+    "#         train[\"Quarter_ob\"] = train[\"Quarter\"].astype(\"object\")\n",
+    "#         train[\"Down_ob\"] = train[\"Down\"].astype(\"object\")\n",
+    "#         train[\"JerseyNumber_ob\"] = train[\"JerseyNumber\"].astype(\"object\")\n",
+    "#         train[\"YardLine_ob\"] = train[\"YardLine\"].astype(\"object\")\n",
+    "        # train[\"DefendersInTheBox_ob\"] = train[\"DefendersInTheBox\"].astype(\"object\")\n",
+    "        # train[\"Week_ob\"] = train[\"Week\"].astype(\"object\")\n",
+    "        # train[\"TimeDelta_ob\"] = train[\"TimeDelta\"].astype(\"object\")\n",
+    "\n",
+    "\n",
+    "        ## Orientation and Dir\n",
+    "        df[\"Orientation_ob\"] = df[\"Orientation\"].apply(lambda x : orientation_to_cat(x)).astype(\"object\")\n",
+    "        df[\"Dir_ob\"] = df[\"Dir\"].apply(lambda x : orientation_to_cat(x)).astype(\"object\")\n",
+    "\n",
+    "        df[\"Orientation_sin\"] = df[\"Orientation\"].apply(lambda x : np.sin(x/360 * 2 * np.pi))\n",
+    "        df[\"Orientation_cos\"] = df[\"Orientation\"].apply(lambda x : np.cos(x/360 * 2 * np.pi))\n",
+    "        df[\"Dir_sin\"] = df[\"Dir\"].apply(lambda x : np.sin(x/360 * 2 * np.pi))\n",
+    "        df[\"Dir_cos\"] = df[\"Dir\"].apply(lambda x : np.cos(x/360 * 2 * np.pi))\n",
+    "        add_new_feas.append(\"Dir_sin\")\n",
+    "        add_new_feas.append(\"Dir_cos\")\n",
+    "\n",
+    "        ## diff Score\n",
+    "        df[\"diffScoreBeforePlay\"] = df[\"HomeScoreBeforePlay\"] - df[\"VisitorScoreBeforePlay\"]\n",
+    "        add_new_feas.append(\"diffScoreBeforePlay\")\n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "        static_features = df[df['NflId'] == df['NflIdRusher']][add_new_feas+['GameId','PlayId','X','Y','S','A','Dis','Orientation','Dir',\n",
+    "                                                            'YardLine','Quarter','Down','Distance','DefendersInTheBox']].drop_duplicates()\n",
+    "#         static_features['DefendersInTheBox'] = static_features['DefendersInTheBox'].fillna(np.mean(static_features['DefendersInTheBox']))\n",
+    "        static_features.fillna(-999,inplace=True)\n",
+    "#         for i in add_new_feas:\n",
+    "#             static_features[i] = static_features[i].fillna(np.mean(static_features[i]))\n",
+    "            \n",
+    "\n",
+    "        return static_features\n",
+    "\n",
+    "\n",
+    "    def combine_features(relative_to_back, defense, static, deploy=deploy):\n",
+    "        df = pd.merge(relative_to_back,defense,on=['GameId','PlayId'],how='inner')\n",
+    "        df = pd.merge(df,static,on=['GameId','PlayId'],how='inner')\n",
+    "\n",
+    "        if not deploy:\n",
+    "            df = pd.merge(df, outcomes, on=['GameId','PlayId'], how='inner')\n",
+    "\n",
+    "        return df\n",
+    "    \n",
+    "    yardline = update_yardline(df)\n",
+    "    df = update_orientation(df, yardline)\n",
+    "    back_feats = back_features(df)\n",
+    "    rel_back = features_relative_to_back(df, back_feats)\n",
+    "    def_feats = defense_features(df)\n",
+    "    static_feats = static_features(df)\n",
+    "    basetable = combine_features(rel_back, def_feats, static_feats, deploy=deploy)\n",
+    "    \n",
+    "    return basetable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_basetable = create_features(train, False)"
+   ]
   }
  ],
  "metadata": {
