top para changes

--- a/ANNDL final.ipynb
+++ b/ANNDL final.ipynb
@@ -11,8 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comprehensive full model https://www.kaggle.com/mrkmakr/neural-network-with-mae-objective-0-01381\n",
-    "Best Performing public notebook currently: https://www.kaggle.com/bestpredict/location-eda-8eb410 and \n",
+    "Forking this model and improving it: https://www.kaggle.com/mrkmakr/neural-network-with-mae-objective-0-01381\n",
+    "\n",
+    "\n",
+    "Other High performing models:  \n",
+    "\n",
+    "https://www.kaggle.com/bestpredict/location-eda-8eb410 and   \n",
+    "\n",
     "https://www.kaggle.com/coolcoder22/nn-19-features\n",
     "\n",
     "**Different feature engineering:**  \n",
