--- a/ANNDL final.ipynb
+++ b/ANNDL final.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,6 +544,20 @@
     "    txt = txt.split(':')\n",
     "    ans = int(txt[0])*60 + int(txt[1]) + int(txt[2])/60\n",
     "    return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#used in preprocess below\n",
+    "def strtofloat(x):\n",
+    "    try:\n",
+    "        return float(x)\n",
+    "    except:\n",
+    "        return -1"
    ]
   },
   {
@@ -992,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1119,6 +1133,387 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def OffensePersonnelSplit(x):\n",
+    "    dic = {'DB' : 0, 'DL' : 0, 'LB' : 0, 'OL' : 0, 'QB' : 0, 'RB' : 0, 'TE' : 0, 'WR' : 0}\n",
+    "    for xx in x.split(\",\"):\n",
+    "        xxs = xx.split(\" \")\n",
+    "        dic[xxs[-1]] = int(xxs[-2])\n",
+    "    return dic\n",
+    "\n",
+    "def DefensePersonnelSplit(x):\n",
+    "    dic = {'DB' : 0, 'DL' : 0, 'LB' : 0, 'OL' : 0}\n",
+    "    for xx in x.split(\",\"):\n",
+    "        xxs = xx.split(\" \")\n",
+    "        dic[xxs[-1]] = int(xxs[-2])\n",
+    "    return dic\n",
+    "\n",
+    "def orientation_to_cat(x):\n",
+    "    x = np.clip(x, 0, 360 - 1)\n",
+    "    try:\n",
+    "        return str(int(x/15))\n",
+    "    except:\n",
+    "        return \"nan\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#not sure why making object copies of everything\n",
+    "def preprocess(train):\n",
+    "    ## GameClock\n",
+    "    train['GameClock_sec'] = train['GameClock'].apply(strtoseconds)\n",
+    "    train[\"GameClock_minute\"] = train[\"GameClock\"].apply(lambda x : x.split(\":\")[0]).astype(\"object\")\n",
+    "\n",
+    "    ## Height\n",
+    "    train['PlayerHeight_dense'] = train['PlayerHeight'].apply(lambda x: 12*int(x.split('-')[0])+int(x.split('-')[1]))\n",
+    "\n",
+    "    ## Time\n",
+    "    train['TimeHandoff'] = train['TimeHandoff'].apply(lambda x: datetime.datetime.strptime(x, \"%Y-%m-%dT%H:%M:%S.%fZ\"))\n",
+    "    train['TimeSnap'] = train['TimeSnap'].apply(lambda x: datetime.datetime.strptime(x, \"%Y-%m-%dT%H:%M:%S.%fZ\"))\n",
+    "\n",
+    "    train['TimeDelta'] = train.apply(lambda row: (row['TimeHandoff'] - row['TimeSnap']).total_seconds(), axis=1)\n",
+    "    train['PlayerBirthDate'] = train['PlayerBirthDate'].apply(lambda x: datetime.datetime.strptime(x, \"%m/%d/%Y\"))\n",
+    "\n",
+    "    ## Age\n",
+    "    seconds_in_year = 60*60*24*365.25\n",
+    "    train['PlayerAge'] = train.apply(lambda row: (row['TimeHandoff']-row['PlayerBirthDate']).total_seconds()/seconds_in_year, axis=1)\n",
+    "    train[\"PlayerAge_ob\"] = train['PlayerAge'].astype(np.int).astype(\"object\")\n",
+    "\n",
+    "    #these 3 become irrelevant. use timedelta and age instead\n",
+    "    train = train.drop(['TimeHandoff', 'TimeSnap', 'PlayerBirthDate'], axis=1)\n",
+    "    \n",
+    "    ## WindSpeed\n",
+    "    train['WindSpeed_ob'] = train['WindSpeed'].apply(lambda x: str(x).lower().replace('mph', '').strip() if not pd.isna(x) else x)\n",
+    "    train['WindSpeed_ob'] = train['WindSpeed_ob'].apply(lambda x: (int(x.split('-')[0])+int(x.split('-')[1]))/2 if not pd.isna(x) and '-' in x else x)\n",
+    "    train['WindSpeed_ob'] = train['WindSpeed_ob'].apply(lambda x: (int(x.split()[0])+int(x.split()[-1]))/2 if not pd.isna(x) and type(x)!=float and 'gusts up to' in x else x)\n",
+    "    train['WindSpeed_dense'] = train['WindSpeed_ob'].apply(strtofloat)\n",
+    "\n",
+    "    ## Weather - SAME\n",
+    "    train['GameWeather_process'] = train['GameWeather'].str.lower()\n",
+    "    train['GameWeather_process'] = train['GameWeather_process'].apply(lambda x: \"indoor\" if not pd.isna(x) and \"indoor\" in x else x)\n",
+    "    train['GameWeather_process'] = train['GameWeather_process'].apply(lambda x: x.replace('coudy', 'cloudy').replace('clouidy', 'cloudy').replace('party', 'partly') if not pd.isna(x) else x)\n",
+    "    train['GameWeather_process'] = train['GameWeather_process'].apply(lambda x: x.replace('clear and sunny', 'sunny and clear') if not pd.isna(x) else x)\n",
+    "    train['GameWeather_process'] = train['GameWeather_process'].apply(lambda x: x.replace('skies', '').replace(\"mostly\", \"\").strip() if not pd.isna(x) else x)\n",
+    "    train['GameWeather_dense'] = train['GameWeather_process'].apply(map_weather)\n",
+    "\n",
+    "    ## Rusher\n",
+    "    train['IsRusher'] = (train['NflId'] == train['NflIdRusher'])\n",
+    "    train['IsRusher_ob'] = (train['NflId'] == train['NflIdRusher']).astype(\"object\")\n",
+    "    temp = train[train[\"IsRusher\"]][[\"Team\", \"PlayId\"]].rename(columns={\"Team\":\"RusherTeam\"})\n",
+    "    train = train.merge(temp, on = \"PlayId\")\n",
+    "    train[\"IsRusherTeam\"] = train[\"Team\"] == train[\"RusherTeam\"]\n",
+    "\n",
+    "    ## dense -> categorical\n",
+    "    train[\"Quarter_ob\"] = train[\"Quarter\"].astype(\"object\")\n",
+    "    train[\"Down_ob\"] = train[\"Down\"].astype(\"object\")\n",
+    "    train[\"JerseyNumber_ob\"] = train[\"JerseyNumber\"].astype(\"object\")\n",
+    "    train[\"YardLine_ob\"] = train[\"YardLine\"].astype(\"object\")\n",
+    "    # train[\"DefendersInTheBox_ob\"] = train[\"DefendersInTheBox\"].astype(\"object\")\n",
+    "    # train[\"Week_ob\"] = train[\"Week\"].astype(\"object\")\n",
+    "    # train[\"TimeDelta_ob\"] = train[\"TimeDelta\"].astype(\"object\")\n",
+    "\n",
+    "\n",
+    "    ## Orientation and Dir\n",
+    "    train[\"Orientation_ob\"] = train[\"Orientation\"].apply(lambda x : orientation_to_cat(x)).astype(\"object\")\n",
+    "    train[\"Dir_ob\"] = train[\"Dir\"].apply(lambda x : orientation_to_cat(x)).astype(\"object\")\n",
+    "\n",
+    "    train[\"Orientation_sin\"] = train[\"Orientation\"].apply(lambda x : np.sin(x/360 * 2 * np.pi))\n",
+    "    train[\"Orientation_cos\"] = train[\"Orientation\"].apply(lambda x : np.cos(x/360 * 2 * np.pi))\n",
+    "    train[\"Dir_sin\"] = train[\"Dir\"].apply(lambda x : np.sin(x/360 * 2 * np.pi))\n",
+    "    train[\"Dir_cos\"] = train[\"Dir\"].apply(lambda x : np.cos(x/360 * 2 * np.pi))\n",
+    "\n",
+    "    ## diff Score\n",
+    "    train[\"diffScoreBeforePlay\"] = train[\"HomeScoreBeforePlay\"] - train[\"VisitorScoreBeforePlay\"]\n",
+    "    train[\"diffScoreBeforePlay_binary_ob\"] = (train[\"HomeScoreBeforePlay\"] > train[\"VisitorScoreBeforePlay\"]).astype(\"object\")\n",
+    "\n",
+    "    ## Turf\n",
+    "    Turf = {'Field Turf':'Artificial', 'A-Turf Titan':'Artificial', 'Grass':'Natural', 'UBU Sports Speed S5-M':'Artificial', 'Artificial':'Artificial', 'DD GrassMaster':'Artificial', 'Natural Grass':'Natural', 'UBU Speed Series-S5-M':'Artificial', 'FieldTurf':'Artificial', 'FieldTurf 360':'Artificial', 'Natural grass':'Natural', 'grass':'Natural', 'Natural':'Natural', 'Artifical':'Artificial', 'FieldTurf360':'Artificial', 'Naturall Grass':'Natural', 'Field turf':'Artificial', 'SISGrass':'Artificial', 'Twenty-Four/Seven Turf':'Artificial', 'natural grass':'Natural'} \n",
+    "    train['Turf'] = train['Turf'].map(Turf)\n",
+    "\n",
+    "    ## OffensePersonnel\n",
+    "    temp = train[\"OffensePersonnel\"].iloc[np.arange(0, len(train), 22)].apply(lambda x : pd.Series(OffensePersonnelSplit(x)))\n",
+    "    temp.columns = [\"Offense\" + c for c in temp.columns]\n",
+    "    temp[\"PlayId\"] = train[\"PlayId\"].iloc[np.arange(0, len(train), 22)]\n",
+    "    train = train.merge(temp, on = \"PlayId\")\n",
+    "\n",
+    "    ## DefensePersonnel\n",
+    "    temp = train[\"DefensePersonnel\"].iloc[np.arange(0, len(train), 22)].apply(lambda x : pd.Series(DefensePersonnelSplit(x)))\n",
+    "    temp.columns = [\"Defense\" + c for c in temp.columns]\n",
+    "    temp[\"PlayId\"] = train[\"PlayId\"].iloc[np.arange(0, len(train), 22)]\n",
+    "    train = train.merge(temp, on = \"PlayId\")\n",
+    "\n",
+    "    ## sort\n",
+    "#     train = train.sort_values(by = ['X']).sort_values(by = ['Dis']).sort_values(by=['PlayId', 'Team', 'IsRusher']).reset_index(drop = True)\n",
+    "    train = train.sort_values(by = ['X']).sort_values(by = ['Dis']).sort_values(by=['PlayId', 'IsRusherTeam', 'IsRusher']).reset_index(drop = True)\n",
+    "    return train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = preprocess(train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GameId</th>\n",
+       "      <th>PlayId</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>S</th>\n",
+       "      <th>A</th>\n",
+       "      <th>Dis</th>\n",
+       "      <th>Orientation</th>\n",
+       "      <th>Dir</th>\n",
+       "      <th>...</th>\n",
+       "      <th>OffenseLB</th>\n",
+       "      <th>OffenseOL</th>\n",
+       "      <th>OffenseQB</th>\n",
+       "      <th>OffenseRB</th>\n",
+       "      <th>OffenseTE</th>\n",
+       "      <th>OffenseWR</th>\n",
+       "      <th>DefenseDB</th>\n",
+       "      <th>DefenseDL</th>\n",
+       "      <th>DefenseLB</th>\n",
+       "      <th>DefenseOL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017090700</td>\n",
+       "      <td>20170907000118</td>\n",
+       "      <td>away</td>\n",
+       "      <td>74.15</td>\n",
+       "      <td>28.90</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>342.58</td>\n",
+       "      <td>274.14</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2017090700</td>\n",
+       "      <td>20170907000118</td>\n",
+       "      <td>away</td>\n",
+       "      <td>74.67</td>\n",
+       "      <td>32.64</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>27.61</td>\n",
+       "      <td>198.70</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017090700</td>\n",
+       "      <td>20170907000118</td>\n",
+       "      <td>away</td>\n",
+       "      <td>71.46</td>\n",
+       "      <td>27.70</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>359.77</td>\n",
+       "      <td>105.64</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2017090700</td>\n",
+       "      <td>20170907000118</td>\n",
+       "      <td>away</td>\n",
+       "      <td>74.11</td>\n",
+       "      <td>16.64</td>\n",
+       "      <td>1.11</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>357.23</td>\n",
+       "      <td>322.59</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2017090700</td>\n",
+       "      <td>20170907000118</td>\n",
+       "      <td>away</td>\n",
+       "      <td>73.37</td>\n",
+       "      <td>18.73</td>\n",
+       "      <td>1.24</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>328.52</td>\n",
+       "      <td>270.04</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 84 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       GameId          PlayId  Team      X      Y     S     A   Dis  \\\n",
+       "0  2017090700  20170907000118  away  74.15  28.90  0.72  0.73  0.01   \n",
+       "1  2017090700  20170907000118  away  74.67  32.64  0.42  1.35  0.01   \n",
+       "2  2017090700  20170907000118  away  71.46  27.70  0.42  0.54  0.02   \n",
+       "3  2017090700  20170907000118  away  74.11  16.64  1.11  0.83  0.02   \n",
+       "4  2017090700  20170907000118  away  73.37  18.73  1.24  0.74  0.13   \n",
+       "\n",
+       "   Orientation     Dir  ...  OffenseLB OffenseOL  OffenseQB  OffenseRB  \\\n",
+       "0       342.58  274.14  ...          0         0          0          1   \n",
+       "1        27.61  198.70  ...          0         0          0          1   \n",
+       "2       359.77  105.64  ...          0         0          0          1   \n",
+       "3       357.23  322.59  ...          0         0          0          1   \n",
+       "4       328.52  270.04  ...          0         0          0          1   \n",
+       "\n",
+       "   OffenseTE  OffenseWR DefenseDB DefenseDL  DefenseLB  DefenseOL  \n",
+       "0          1          3         6         2          3          0  \n",
+       "1          1          3         6         2          3          0  \n",
+       "2          1          3         6         2          3          0  \n",
+       "3          1          3         6         2          3          0  \n",
+       "4          1          3         6         2          3          0  \n",
+       "\n",
+       "[5 rows x 84 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['GameId', 'PlayId', 'Team', 'X', 'Y', 'S', 'A', 'Dis', 'Orientation',\n",
+       "       'Dir', 'NflId', 'DisplayName', 'JerseyNumber', 'Season', 'YardLine',\n",
+       "       'Quarter', 'GameClock', 'PossessionTeam', 'Down', 'Distance',\n",
+       "       'FieldPosition', 'HomeScoreBeforePlay', 'VisitorScoreBeforePlay',\n",
+       "       'NflIdRusher', 'OffenseFormation', 'OffensePersonnel',\n",
+       "       'DefendersInTheBox', 'DefensePersonnel', 'PlayDirection', 'Yards',\n",
+       "       'PlayerHeight', 'PlayerWeight', 'PlayerCollegeName', 'Position',\n",
+       "       'HomeTeamAbbr', 'VisitorTeamAbbr', 'Week', 'Stadium', 'Location',\n",
+       "       'StadiumType', 'Turf', 'GameWeather', 'Temperature', 'Humidity',\n",
+       "       'WindSpeed', 'WindDirection', 'GameClock_sec', 'GameClock_minute',\n",
+       "       'PlayerHeight_dense', 'TimeDelta', 'PlayerAge', 'PlayerAge_ob',\n",
+       "       'WindSpeed_ob', 'WindSpeed_dense', 'GameWeather_process',\n",
+       "       'GameWeather_dense', 'IsRusher', 'IsRusher_ob', 'RusherTeam',\n",
+       "       'IsRusherTeam', 'Quarter_ob', 'Down_ob', 'JerseyNumber_ob',\n",
+       "       'YardLine_ob', 'Orientation_ob', 'Dir_ob', 'Orientation_sin',\n",
+       "       'Orientation_cos', 'Dir_sin', 'Dir_cos', 'diffScoreBeforePlay',\n",
+       "       'diffScoreBeforePlay_binary_ob', 'OffenseDB', 'OffenseDL', 'OffenseLB',\n",
+       "       'OffenseOL', 'OffenseQB', 'OffenseRB', 'OffenseTE', 'OffenseWR',\n",
+       "       'DefenseDB', 'DefenseDL', 'DefenseLB', 'DefenseOL'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.columns\n"
+   ]
   },
   {
    "cell_type": "code",
